--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HolyQuran">
         <activity
-            android:name=".SpecificVerseActivity"
+            android:name=".Activities.SpecificVerseActivity"
             android:exported="true"
             android:screenOrientation="portrait"/>
         <activity
